# qr-for-free-webonly

./: .gitignore  Cargo.toml  MIT_LICENSE  Makefile.toml  package-lock.json  package.json  readme.md  run.sh  tailwind.config.js
frontend/: Cargo.toml  Dioxus.toml
frontend/src/: main.rs
