[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
dioxus = "0.4.3"
dioxus-router = "0.4.3"
dioxus-web = "0.4.3"
image = { version = "0.25.0", features = ["png"] }
qrcode = "0.14.0"
url = "2.5.0"
