[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
dioxus = { version = "0.5.0", features = ["web"] }
image = { version = "0.25.0", features = ["png"] }
qrcode = "0.14.0"
url = "2.5.0"
